fixed floating tweet button alignment for width<500px

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -319,7 +319,8 @@ button:hover {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: absolute;
+	position: fixed;
+	box-sizing: border-box;
 	height: 56px;
 	width: 56px;
 	aspect-ratio: 1/1;
@@ -371,7 +372,7 @@ button:hover {
 
 	justify-content: center;
 	align-items: center;
-	box-sizing: border-box;
+	box-sizing: content-box;
 	background-color: rgb(29, 155, 240);
 	border-radius: 50%;
 	box-shadow: 0px 1px 8px 1px rgba(101, 119, 134, 0.4);
